--- a/MySampleApp/App/Launch Screen.storyboard
+++ b/MySampleApp/App/Launch Screen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,20 +18,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Splash.png" translatesAutoresizingMaskIntoConstraints="NO" id="5bT-h0-Gof">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Splash.png" translatesAutoresizingMaskIntoConstraints="NO" id="mBZ-IB-5nk">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="mBZ-IB-5nk" secondAttribute="height" multiplier="1:1" id="i1l-Qs-G7o"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashInfo.png" translatesAutoresizingMaskIntoConstraints="NO" id="TBd-qD-jPU">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashInfo.png" translatesAutoresizingMaskIntoConstraints="NO" id="VWU-9K-5rO">
                                 <rect key="frame" x="201" y="205" width="198" height="189"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="TBd-qD-jPU" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="8hb-jw-Cpz"/>
-                            <constraint firstItem="5bT-h0-Gof" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="QUI-I5-K5P"/>
-                            <constraint firstItem="TBd-qD-jPU" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="d4c-XW-jbu"/>
-                            <constraint firstItem="5bT-h0-Gof" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="m2j-NN-rsq"/>
+                            <constraint firstItem="mBZ-IB-5nk" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="02z-IW-N8z"/>
+                            <constraint firstItem="VWU-9K-5rO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ija-iE-y38"/>
+                            <constraint firstItem="mBZ-IB-5nk" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="KC9-LQ-y6N"/>
+                            <constraint firstItem="mBZ-IB-5nk" firstAttribute="width" secondItem="mBZ-IB-5nk" secondAttribute="height" multiplier="1:1" id="X1p-8B-FrQ"/>
+                            <constraint firstItem="VWU-9K-5rO" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="aPY-mr-hcJ"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="X1p-8B-FrQ"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
