--- a/MySampleApp/App/Main.storyboard
+++ b/MySampleApp/App/Main.storyboard
@@ -3,14 +3,97 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Map View Controller-->
+        <scene sceneID="Zti-k6-NFM">
+            <objects>
+                <viewController id="aF5-PY-dyF" customClass="MapViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lmE-1Z-9YD"/>
+                        <viewControllerLayoutGuide type="bottom" id="IP9-UC-fYx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tyk-zJ-z7Y">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ESH-Ab-qKk">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="519"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sfu-2L-R8C">
+                                <rect key="frame" x="0.0" y="518" width="600" height="87"/>
+                                <color key="backgroundColor" red="0.21176470589999999" green="0.47450980390000003" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="82" id="Qyh-aJ-Qbh"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="82" id="wYJ-LJ-Zeb"/>
+                                </constraints>
+                                <state key="normal" title="Happening now" image="happeningOval.png"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" background="searchmap.png" translatesAutoresizingMaskIntoConstraints="NO" id="Smk-d3-LHk">
+                                <rect key="frame" x="30" y="28" width="540" height="38"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H0b-fF-rCz">
+                                <rect key="frame" x="33" y="31" width="29" height="33"/>
+                                <state key="normal" image="menu.png"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="H0b-fF-rCz" firstAttribute="leading" secondItem="Smk-d3-LHk" secondAttribute="leading" id="057-Ug-SKt"/>
+                            <constraint firstItem="Smk-d3-LHk" firstAttribute="centerX" secondItem="tyk-zJ-z7Y" secondAttribute="centerX" id="2Kg-zF-qyF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Smk-d3-LHk" secondAttribute="trailing" constant="10" id="5AV-Nv-259"/>
+                            <constraint firstItem="IP9-UC-fYx" firstAttribute="top" secondItem="ESH-Ab-qKk" secondAttribute="bottom" constant="81" id="6C3-DQ-eS0"/>
+                            <constraint firstItem="Smk-d3-LHk" firstAttribute="top" secondItem="lmE-1Z-9YD" secondAttribute="bottom" constant="15" id="BRS-m0-1PA"/>
+                            <constraint firstItem="Sfu-2L-R8C" firstAttribute="top" secondItem="lmE-1Z-9YD" secondAttribute="bottom" constant="498" id="Ba0-q4-iIY"/>
+                            <constraint firstItem="H0b-fF-rCz" firstAttribute="top" secondItem="Smk-d3-LHk" secondAttribute="top" id="BtX-OJ-G8E"/>
+                            <constraint firstItem="ESH-Ab-qKk" firstAttribute="centerX" secondItem="tyk-zJ-z7Y" secondAttribute="centerX" id="CjC-PS-Pnr"/>
+                            <constraint firstItem="Sfu-2L-R8C" firstAttribute="width" secondItem="tyk-zJ-z7Y" secondAttribute="width" id="Jn4-Cn-fI8"/>
+                            <constraint firstItem="H0b-fF-rCz" firstAttribute="centerY" secondItem="Smk-d3-LHk" secondAttribute="centerY" id="OGR-td-It6"/>
+                            <constraint firstItem="ESH-Ab-qKk" firstAttribute="centerY" secondItem="tyk-zJ-z7Y" secondAttribute="centerY" id="OgE-A3-P7C"/>
+                            <constraint firstItem="H0b-fF-rCz" firstAttribute="bottom" secondItem="Smk-d3-LHk" secondAttribute="bottom" id="eC1-tb-1VQ"/>
+                            <constraint firstItem="Smk-d3-LHk" firstAttribute="leading" secondItem="tyk-zJ-z7Y" secondAttribute="leadingMargin" constant="10" id="eRU-YP-47t"/>
+                            <constraint firstItem="IP9-UC-fYx" firstAttribute="top" secondItem="Sfu-2L-R8C" secondAttribute="bottom" id="f2V-LW-Jzs"/>
+                            <constraint firstItem="IP9-UC-fYx" firstAttribute="top" secondItem="ESH-Ab-qKk" secondAttribute="bottom" constant="81" id="gUf-4C-wke"/>
+                            <constraint firstItem="ESH-Ab-qKk" firstAttribute="width" secondItem="tyk-zJ-z7Y" secondAttribute="width" id="iAo-mA-bbr"/>
+                            <constraint firstItem="ESH-Ab-qKk" firstAttribute="top" secondItem="lmE-1Z-9YD" secondAttribute="bottom" constant="-20" id="lWV-5Z-of3"/>
+                            <constraint firstItem="Sfu-2L-R8C" firstAttribute="top" secondItem="ESH-Ab-qKk" secondAttribute="bottom" constant="-1" id="mbR-Tc-YGl"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="CjC-PS-Pnr"/>
+                                <exclude reference="OgE-A3-P7C"/>
+                                <exclude reference="Ba0-q4-iIY"/>
+                                <exclude reference="mbR-Tc-YGl"/>
+                                <exclude reference="6C3-DQ-eS0"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="Jjg-2m-Kx6"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="nCa-W6-9vC" id="EyV-9x-Hnl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7pk-aa-Yiz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="nCa-W6-9vC">
+                    <connections>
+                        <outlet property="delegate" destination="aF5-PY-dyF" id="lPv-kW-Xab"/>
+                        <outlet property="searchContentsController" destination="aF5-PY-dyF" id="EsS-TK-aJe"/>
+                        <outlet property="searchResultsDataSource" destination="aF5-PY-dyF" id="nMv-J1-Z8P"/>
+                        <outlet property="searchResultsDelegate" destination="aF5-PY-dyF" id="sRF-Tx-Vn6"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1289" y="467"/>
+        </scene>
         <!--My Sample App-->
         <scene sceneID="zBM-Ku-UbQ">
             <objects>
                 <tableViewController storyboardIdentifier="Main" title="My Sample App" id="HKv-yk-r7M" customClass="MainViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" id="3oO-xQ-WqP">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -53,14 +136,14 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0lx-xM-3gj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1432" y="467"/>
+            <point key="canvasLocation" x="2133" y="344"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="iLu-if-voD">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="p1Q-oH-ibG" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="p1Q-oH-ibG" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Llk-Fw-3VQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -72,15 +155,18 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="HKv-yk-r7M" kind="relationship" relationship="rootViewController" id="vLB-Hq-tnt"/>
+                        <segue destination="aF5-PY-dyF" kind="relationship" relationship="rootViewController" id="Xs7-6H-BRG"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5ih-jC-buG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="665.625" y="467.95774647887322"/>
+            <point key="canvasLocation" x="584" y="467"/>
         </scene>
     </scenes>
     <resources>
         <image name="UserIdentityIcon" width="50" height="50"/>
+        <image name="happeningOval.png" width="36" height="36"/>
+        <image name="menu.png" width="29" height="27"/>
+        <image name="searchmap.png" width="355" height="43"/>
     </resources>
 </document>
