--- a/MySampleApp/App/Main.storyboard
+++ b/MySampleApp/App/Main.storyboard
@@ -36,9 +36,56 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H0b-fF-rCz">
-                                <rect key="frame" x="33" y="31" width="29" height="33"/>
+                                <rect key="frame" x="30" y="34" width="56" height="25"/>
                                 <state key="normal" image="menu.png"/>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iDg-nK-yCZ">
+                                <rect key="frame" x="0.0" y="0.0" width="302" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="header" rowHeight="138" id="jcS-Yn-T3k">
+                                        <rect key="frame" x="0.0" y="28" width="302" height="138"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jcS-Yn-T3k" id="eYF-lY-F8U">
+                                            <rect key="frame" x="0.0" y="0.0" width="302" height="137"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logoback.png" translatesAutoresizingMaskIntoConstraints="NO" id="hcH-FW-XE0">
+                                                    <rect key="frame" x="8" y="5" width="40" height="34"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SAU-Bq-rRn">
+                                                    <rect key="frame" x="8" y="47" width="78" height="78"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="carlos.robinson@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EEz-cH-HMo">
+                                                    <rect key="frame" x="91" y="95" width="211" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Carlos andres robinson lara" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="13Q-TX-Y6z">
+                                                    <rect key="frame" x="91" y="47" width="211" height="48"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.91764705879999997" green="0.34901960780000002" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="menu" rowHeight="69" id="Pad-Ek-Ju4">
+                                        <rect key="frame" x="0.0" y="166" width="302" height="69"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pad-Ek-Ju4" id="A44-aW-69n">
+                                            <rect key="frame" x="0.0" y="0.0" width="302" height="68"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="aF5-PY-dyF" id="tIj-mA-ExT"/>
+                                    <outlet property="delegate" destination="aF5-PY-dyF" id="HWP-FB-aht"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -73,6 +120,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Jjg-2m-Kx6"/>
                     <connections>
+                        <outlet property="menuTableView" destination="iDg-nK-yCZ" id="hwu-8f-74N"/>
                         <outlet property="searchDisplayController" destination="nCa-W6-9vC" id="EyV-9x-Hnl"/>
                     </connections>
                 </viewController>
@@ -166,6 +214,7 @@
     <resources>
         <image name="UserIdentityIcon" width="50" height="50"/>
         <image name="happeningOval.png" width="36" height="36"/>
+        <image name="logoback.png" width="65" height="56"/>
         <image name="menu.png" width="29" height="27"/>
         <image name="searchmap.png" width="355" height="43"/>
     </resources>
